testsuite/tests/flambda/to_cmm_reordering_control_flow_1.reference
Fatal error: exception Assert_failure("to_cmm_reordering_control_flow_1.ml", 16, 81)
